# rosco

./: .gitignore  .gitmodules  AGENT_RULES.md  CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  main.rs  test_frequency_fix.rs
src/audio_gen/: audio_gen.rs  get_sample.rs  mod.rs  oscillator.rs  summary.md
src/common/: summary.md
src/composition/: comp_utils.rs  summary.md
src/compositions/: dsl_1.rs  summary.md
src/dsl/: README.md  parser.rs  summary.md  test_filter.dsl
src/effect/: lfo.rs  summary.md
src/envelope/: summary.md
src/filter/: README.md  band_pass_filter.rs  example.rs  high_pass_filter.rs  low_pass_filter.rs  mod.rs  notch_filter.rs  summary.md  test_filter.rs
src/meter/: durations.rs  summary.md
src/midi/: summary.md
src/note/: note_trait.rs  playback_note.rs  scales.rs  summary.md
src/sequence/: fixed_time_note_sequence.rs  mod.rs  summary.md  time_note_sequence.rs
src/track/: mod.rs  summary.md  track.rs  track_effects.rs
src/tui/: app.rs  audio_bridge.rs  audio_engine.rs  config.rs  events.rs  mod.rs  pattern_manager.rs  track_bridge.rs
src/tui/ui/: mod.rs  sequencer.rs  synthesizer.rs  transport.rs
src/tui/ui/widgets/: grid.rs  meter.rs  mod.rs  selector.rs  slider.rs
tools/: update_vendored.sh
tools/spec/: README.md  chorus.md  comb.md  equalizer.md  filter.md  lfo.md  tapped_delay_line.md  tremolo.md  vibrato.md
tools/spec/gui/: .tui_implementation_plan.md.swp  TUI_MANUAL_TEST_PLAN.md  gui_implementation_plan.md  rust_ui_library_analysis.md  tui_implementation_plan.md  tui_vs_gui_requirements.md
