[package]
name = "osc"
version = "0.1.0"
edition = "2021"
description = "Music composition tools in Rust"
authors = ["Mark S. Weiss"]

[[bin]]
name = "rosco"
path = "src/main.rs"

[[bin]]
name = "rosco-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "test-tui"
path = "src/bin/test-tui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.16.0"
derive_builder = "0.20.0"
float_eq = "1.0.1"
hound = "3.5.1"
nodi = "1.0.0"
once_cell = "1.19.0"
rand = "0.9.0-alpha.2"
rand_distr = "0.5.0-alpha.3"
regex = "1.10.3"

# TUI dependencies
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Audio threading and communication
ringbuf = "0.3"
atomic_float = "0.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
